cabal-version: 3.8
name: lambdacubed
version: 0.1.0.0
description: See README.md
license: BSD-3-Clause
license-file: LICENSE
author: Benjamin Riedemann
maintainer: benjamin.riedemann@rwth-aachen.de
homepage: https://github.com/benjamin-rdm/lambdacubed#readme
bug-reports: https://github.com/benjamin-rdm/lambdacubed/issues
category: Game
build-type: Simple
extra-source-files:
  ChangeLog.md
  README.md

tested-with:
  ghc ==9.6.* || ==9.8.* || ==9.10.*

common common-opts
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages
    -Werror
    -fspecialise-aggressively
    -fstatic-argument-transformation
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2
    -optlo-O3

executable lambdacubed-exe
  import: common-opts
  hs-source-dirs:
    app
    src

  main-is: Main.hs
  other-modules:
    App.Config
    Game.Block.Atlas
    Game.Block.Properties
    Game.ChunkWorkers
    Game.Direction
    Game.Physics
    Game.World
    Game.WorldManager
    Game.WorldSource
    Rendering.Camera
    Rendering.Mesh
    Rendering.Render
    Rendering.Shader.AST
    Rendering.Shader.Outline
    Rendering.Shader.Sky
    Rendering.Shader.Terrain
    Rendering.Shader.Typed
    Rendering.Shader.UI
    Rendering.Shader.Utils
    Rendering.Texture
    Utils.Math
    Utils.Monad
    Utils.PerlinNoise

  build-depends:
    GLFW-b,
    JuicyPixels,
    OpenGL,
    aeson,
    async,
    base,
    bytestring,
    containers,
    deepseq,
    filepath,
    linear,
    mtl,
    stm,
    text,
    transformers,
    vector,
